### tweak(Git): Git ignore logs (HEAD -> feat/ApacheSIS)
>Mon, 8 Apr 2024 09:47:46 +0200

>Author: Emile Muller (emuller@pc14.geomatys.lan)

>Commiter: Emile Muller (emuller@pc14.geomatys.lan)




### tweak(Git): Git ignore logs (origin/feat/ApacheSIS)
>Mon, 8 Apr 2024 09:45:28 +0200

>Author: Emile Muller (emuller@pc14.geomatys.lan)

>Commiter: Emile Muller (emuller@pc14.geomatys.lan)




### feat(GML generation): Optimizing the GML generation with multithreading
>Fri, 5 Apr 2024 17:15:23 +0200

>Author: Emile Muller (emuller@pc14.geomatys.lan)

>Commiter: Emile Muller (emuller@pc14.geomatys.lan)




### feat(GML generation): Added code for GML generation, using ApacheSIS + Cleanup
>Fri, 5 Apr 2024 16:17:28 +0200

>Author: Emile Muller (emuller@pc14.geomatys.lan)

>Commiter: Emile Muller (emuller@pc14.geomatys.lan)




### refactor(test): Better exception management for tests. 'requests' automatically close, no need to response.close()
>Fri, 5 Apr 2024 11:08:16 +0200

>Author: Emile Muller (emuller@pc14.geomatys.lan)

>Commiter: Emile Muller (emuller@pc14.geomatys.lan)




### doc(search): Documentation tweaks
>Fri, 5 Apr 2024 09:27:27 +0200

>Author: Emile Muller (emuller@pc14.geomatys.lan)

>Commiter: Emile Muller (emuller@pc14.geomatys.lan)




### feat(EPSG): Added necessary files from the EPSG extension; used by ApacheSIS.
>Fri, 5 Apr 2024 09:14:02 +0200

>Author: Emile Muller (emuller@pc14.geomatys.lan)

>Commiter: Emile Muller (emuller@pc14.geomatys.lan)




### refactor(search): Factorized some functions with redundant code
>Thu, 4 Apr 2024 17:41:07 +0200

>Author: Emile Muller (emuller@pc14.geomatys.lan)

>Commiter: Emile Muller (emuller@pc14.geomatys.lan)




### feat(ApacheSIS): Removed GDAL calls and replaced with ApacheSIS
>Thu, 4 Apr 2024 16:39:13 +0200

>Author: Emile Muller (emuller@pc14.geomatys.lan)

>Commiter: Emile Muller (emuller@pc14.geomatys.lan)




### Checking if commits work
>Wed, 3 Apr 2024 11:45:44 +0200
