@@ -1,0 +1,1 @@
+<?xml version="1.0" encoding="UTF-8"?><gml:GeodeticCRS xmlns:gmx="http://www.isotc211.org/2005/gmx" xmlns:gmd="http://www.isotc211.org/2005/gmd" xmlns:gml="http://www.opengis.net/gml/3.2" xmlns:srv1="http://www.isotc211.org/2005/srv" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:dqm="http://standards.iso.org/iso/19157/-2/dqm/1.0" xmlns:fra="http://www.cnig.gouv.fr/2005/fra" xmlns:gmi="http://standards.iso.org/iso/19115/-2/gmi/1.0" xmlns:gcol="http://www.isotc211.org/2005/gco" xmlns:gts="http://www.isotc211.org/2005/gts" gml:id="iau-crs-1000"><gml:identifier codeSpace="IAU:2015">1000</gml:identifier><gml:name>Sun (2015) - Sphere / Ocentric</gml:name><gml:remarks>Source of IAU Coordinate systems: doi://10.1007/s10569-017-9805-5</gml:remarks><gml:ellipsoidalCS><gml:EllipsoidalCS gml:id="EllipsoidalCSNorthEast"><gml:name>Ellipsoidal CS: North (°), East (°).</gml:name><gml:axis><gml:CoordinateSystemAxis uom="urn:ogc:def:uom:EPSG::9122" gml:id="GeodeticLatitude"><gml:name>Geodetic latitude</gml:name><gml:axisAbbrev>φ</gml:axisAbbrev><gml:axisDirection codeSpace="EPSG">north</gml:axisDirection><gml:minimumValue>-90.0</gml:minimumValue><gml:maximumValue>90.0</gml:maximumValue><gml:rangeMeaning codeSpace="EPSG">exact</gml:rangeMeaning></gml:CoordinateSystemAxis></gml:axis><gml:axis><gml:CoordinateSystemAxis uom="urn:ogc:def:uom:EPSG::9122" gml:id="GeodeticLongitude"><gml:name>Geodetic longitude</gml:name><gml:axisAbbrev>λ</gml:axisAbbrev><gml:axisDirection codeSpace="EPSG">east</gml:axisDirection><gml:minimumValue>-180.0</gml:minimumValue><gml:maximumValue>180.0</gml:maximumValue><gml:rangeMeaning codeSpace="EPSG">wraparound</gml:rangeMeaning></gml:CoordinateSystemAxis></gml:axis></gml:EllipsoidalCS></gml:ellipsoidalCS><gml:geodeticDatum><gml:GeodeticDatum gml:id="Sun2015Sphere"><gml:name>Sun (2015) - Sphere</gml:name><gml:primeMeridian><gml:PrimeMeridian gml:id="ReferenceMeridian"><gml:name>Reference Meridian</gml:name><gml:greenwichLongitude uom="urn:ogc:def:uom:EPSG::9102">0.0</gml:greenwichLongitude></gml:PrimeMeridian></gml:primeMeridian><gml:ellipsoid><gml:Ellipsoid gml:id="Sun2015Sphere-1"><gml:name>Sun (2015) - Sphere</gml:name><gml:semiMajorAxis uom="urn:ogc:def:uom:EPSG::9001">6.957E8</gml:semiMajorAxis><gml:secondDefiningParameter><gml:SecondDefiningParameter><gml:isSphere>true</gml:isSphere></gml:SecondDefiningParameter></gml:secondDefiningParameter></gml:Ellipsoid></gml:ellipsoid></gml:GeodeticDatum></gml:geodeticDatum></gml:GeodeticCRS>
