@@ -3,6 +3,7 @@ asyncpg==0.27.0
 fastapi==0.95.2
 httpx==0.24.1
 jinja2==3.1.2
+jpype1==1.5.0
 pydantic==1.10.2
 pydantic-xml[lxml]==0.2.2
 python-dotenv==0.21.0
